--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Cselia | Graphic Designer & Illustrator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='stylewip.css' rel='stylesheet'>
+        <link rel="stylesheet" href="https://use.typekit.net/imc7abs.css">
     </head>
     <body>
         <main>
