--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='stylewip.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://use.typekit.net/imc7abs.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     </head>
     <body>
         <main>
