--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     </head>
     <body>
-        <main>
+        <main id="wip-message">
             <div id="coming-soon-message">
+                <div class="spacer"></div>
                 <img id="logo" src="Assets/logo-brown.png">
                 <img id="wip-image" src="Assets/wip.svg">
                 <p id="h1">Thank you for stopping by!</p>
