--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href='stylewip.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://use.typekit.net/imc7abs.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+        <link rel="icon" type="image/x-icon" href="Assets/favicon.svg">
     </head>
     <body>
         <main id="wip-message">
