--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://use.typekit.net/imc7abs.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
         <link rel="icon" type="image/x-icon" href='Assets/faviconv2.svg'>
-        <meta name="thumbnail" content='Assets/google-thumbnail.svg'>
+        <meta name="thumbnail" href='Assets/google-thumbnail.svg'>
     </head>
     <body>
         <main id="wip-message">
